--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Anonymous Confession</title>
+<title>JNTUH Confessions</title>
 
 <style>
 * { box-sizing: border-box; }
@@ -24,25 +24,33 @@ body {
 /* ---------- CARD ---------- */
 .container {
   width: 100%;
-  max-width: 500px;
-  background: rgba(15,17,20,0.85);
+  max-width: 520px;
+  background: rgba(15,17,20,0.88);
   backdrop-filter: blur(14px);
   border-radius: 18px;
-  padding: 30px 26px;
+  padding: 32px 26px;
   box-shadow: 0 30px 80px rgba(0,0,0,0.9);
   text-align: center;
   position: relative;
   z-index: 2;
 }
 
+/* ---------- TEXT ---------- */
 h1 {
-  font-size: 19px;
-  font-weight: 500;
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 1.2px;
   margin-bottom: 6px;
-  letter-spacing: 0.6px;
 }
 
-p.note {
+.tagline {
+  font-size: 13px;
+  color: #7f8cff;
+  margin-bottom: 10px;
+  opacity: 0.9;
+}
+
+.note {
   font-size: 13px;
   color: #9aa0a6;
   margin-bottom: 22px;
@@ -123,7 +131,7 @@ button:disabled {
   100% { transform: scale(1); opacity: 1; }
 }
 
-/* ---------- FALLING PARTICLES ---------- */
+/* ---------- PARTICLES ---------- */
 canvas {
   position: fixed;
   inset: 0;
@@ -136,11 +144,13 @@ canvas {
 <body>
 
 <div class="container">
-  <h1>Anonymous Confession</h1>
-  <p class="note" id="note"></p>
+  <h1>JNTUH Confessions</h1>
+  <div class="tagline">Confess anonymously. No names. No judgment.</div>
+  <div class="note" id="note"></div>
 
   <form id="confessionForm">
-    <textarea id="confessionText" placeholder="Type what you carry inside..."></textarea>
+    <textarea id="confessionText"
+      placeholder="Confess anonymously. No one will ever know it was you."></textarea>
     <button type="submit" id="submitBtn">Release</button>
   </form>
 
@@ -151,11 +161,11 @@ canvas {
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-import { getFirestore, collection, doc, setDoc, serverTimestamp } 
+import { getFirestore, doc, setDoc, serverTimestamp }
 from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
 
-/* 🔴 Manual Open/Close */
-const OPEN = true;
+/* 🔴 MANUAL OPEN / CLOSE */
+const OPEN = true; // true = open | false = closed
 
 const firebaseConfig = {
   apiKey: "AIzaSyBG5Z71bIS4HA-0y5477uDKCxHgDkWaO_I",
@@ -183,7 +193,7 @@ if (!OPEN) {
   note.innerText = "Submissions are open.";
 }
 
-/* ---------- FALLING PARTICLES ---------- */
+/* ---------- PARTICLES ---------- */
 const canvas = document.getElementById("particles");
 const ctx = canvas.getContext("2d");
 let particles = [];
