--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@ canvas {
 
 <div class="container">
   <h1>JNTUH Confessions</h1>
-  <div class="tagline">Confess anonymously. No names. No judgment.</div>
+  <div class="tagline">Confess anonymously.</div>
   <div class="note" id="note"></div>
 
   <form id="confessionForm">
     <textarea id="confessionText"
-      placeholder="Confess anonymously. No one will ever know it was you."></textarea>
-    <button type="submit" id="submitBtn">Release</button>
+      placeholder="Confess anonymously.🤫"></textarea>
+    <button type="submit" id="submitBtn">Submit</button>
   </form>
 
   <div id="status"></div>
@@ -190,7 +190,7 @@ if (!OPEN) {
   status.innerText = "Please check back later.";
   status.classList.add("closed");
 } else {
-  note.innerText = "Submissions are open.";
+  note.innerText = "It's only me reading🙊👀";
 }
 
 /* ---------- PARTICLES ---------- */
