--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@ canvas {
 <body>
 
 <div class="container">
-  <h1>JNTUH Confessions</h1>
-  <div class="tagline">Confess anonymously.</div>
+  <h1>JNTUH CONFESSIONS🏫</h1>
+  <div class="tagline">Your Confession is Encrypted and PRIVATE🔒.</div>
   <div class="note" id="note"></div>
 
   <form id="confessionForm">
     <textarea id="confessionText"
-      placeholder="Confess anonymously.🤫"></textarea>
-    <button type="submit" id="submitBtn">Submit</button>
+      placeholder="Confess anonymously 🤫...."></textarea>
+    <button type="submit" id="submitBtn">Submit📨</button>
   </form>
 
   <div id="status"></div>
