--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ import { getFirestore, doc, setDoc, serverTimestamp }
 from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
 
 /* 🔴 MANUAL OPEN / CLOSE */
-const OPEN = false; // true = open | false = closed
+const OPEN = true; // true = open | false = closed
 
 const firebaseConfig = {
   apiKey: "AIzaSyBG5Z71bIS4HA-0y5477uDKCxHgDkWaO_I",
