--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@ const note = document.getElementById("note");
 if (!OPEN) {
   textInput.disabled = true;
   btn.disabled = true;
-  note.innerText = "Submissions are currently closed.";
-  status.innerText = "Please check back later.";
+  note.innerText = "Submissions are currently closed.🤒";
+  status.innerText = "Please check back 🤕 later.";
   status.classList.add("closed");
 } else {
-  note.innerText = "It's only me reading🙊👀";
+  note.innerText = "🙊It's only me reading👀";
 }
 
 /* ---------- PARTICLES ---------- */
