--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@ button:disabled {
   100% { transform: scale(1); opacity: 1; }
 }
 
+/* ---------- ADS ---------- */
+.ads-box {
+  margin-top: 26px;
+  padding-top: 14px;
+  border-top: 1px solid rgba(255,255,255,0.08);
+  text-align: center;
+  opacity: 0.9;
+}
+
 /* ---------- PARTICLES ---------- */
 canvas {
   position: fixed;
@@ -149,12 +158,19 @@ canvas {
   <div class="note" id="note"></div>
 
   <form id="confessionForm">
-    <textarea id="confessionText"
-      placeholder="Confess anonymously 🤫...."></textarea>
+    <textarea id="confessionText" placeholder="Confess anonymously 🤫...."></textarea>
     <button type="submit" id="submitBtn">Submit📨</button>
   </form>
 
   <div id="status"></div>
+
+  <!-- ADS BOX -->
+  <div class="ads-box">
+    <script async="async" data-cfasync="false"
+      src="https://pl28344884.effectivegatecpm.com/54c3f4e0a27dd6be7c54837ac50c66bc/invoke.js">
+    </script>
+    <div id="container-54c3f4e0a27dd6be7c54837ac50c66bc"></div>
+  </div>
 </div>
 
 <canvas id="particles"></canvas>
@@ -165,7 +181,7 @@ import { getFirestore, doc, setDoc, serverTimestamp }
 from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
 
 /* 🔴 MANUAL OPEN / CLOSE */
-const OPEN = true; // true = open | false = closed
+const OPEN = true;
 
 const firebaseConfig = {
   apiKey: "AIzaSyBG5Z71bIS4HA-0y5477uDKCxHgDkWaO_I",
