--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ if (!OPEN) {
   status.innerText = "Please check back 🤕 later.";
   status.classList.add("closed");
 } else {
-  note.innerText = "🙊It's only me reading👀";
+  note.innerText = "🙊It's only me reading,Feel free to share your thoughts or confessions; there's nothing to worry about. You are completely anonymous here.👀";
 }
 
 /* ---------- PARTICLES ---------- */
