--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ if (!OPEN) {
   note.innerText = "Submissions are closed 🤒";
   status.classList.add("closed");
 } else {
-  note.innerText = "🙊 Only me reading 👀";
+  note.innerText = "🙊It's only me reading,Feel free to share your thoughts or confessions; there's nothing to worry about. You are completely anonymous here.💯";
 }
 
 /* ---------- PARTICLES ---------- */
